Update and rebuild page layout

--- a/models/blog-post.ini
+++ b/models/blog-post.ini
@@ -4,25 +4,23 @@ label = {{ this.title }}
 hidden = yes
 
 [fields.title]
-label = Title
+label = Event Name
 type = string
 size = large
 
-[fields.author]
-label = Author
-type = string
+[fields.event_start_date]
+label = event start
+type = date
 width = 1/2
 
-[fields.twitter_handle]
-label = Twitter Handle
-type = string
-width = 1/4
-addon_label = @
-
-[fields.pub_date]
-label = Publication date
+[fields.event_end_date]
+label = event end
 type = date
-width = 1/4
+width = 1/2
+
+[fields.preview]
+label = Preview
+type = markdown
 
 [fields.body]
 label = Body
