--- a/models/blog.ini
+++ b/models/blog.ini
@@ -1,7 +1,7 @@
 [model]
 name = Blog
 label = Blog
-hidden = yes
+hidden = true
 
 [fields.title]
 label = Title
@@ -9,8 +9,8 @@ type = string
 
 [children]
 model = blog-post
-order_by = -pub_date, title
+order_by = -event_start_date,title
 
 [pagination]
-enabled = yes
-per_page = 10
+enabled = true
+per_page = 7
