--- a/models/start.ini
+++ b/models/start.ini
@@ -15,3 +15,7 @@ type = string
 [fields.body]
 label = Body
 type = markdown
+
+[fields.description]
+label = Page Description for Search Engine
+type = text
