Update FFF Demo

--- a/models/start.ini
+++ b/models/start.ini
@@ -9,8 +9,9 @@ type = string
 
 [fields.image]
 label = Image
-description = Image URL Path
-type = string
+description = Optional add multiple images
+type = flow
+flow_blocks = image_start
 
 [fields.body]
 label = Body
